Add character button transition

--- a/character.html
+++ b/character.html
@@ -5,13 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles/character_styles.css">
 </head>
 <body>
-    
+
+    <div class="loader-div ">
+        <span class="loader">
+          <img src="imgs/Portal.png" alt="Portal">
+        </span>
+    </div>
+
     <div id="charDiv">
 
     </div>
 
-    <script src="character.js"></script>
+    <script src="scripts/character.js"></script>
 </body>
 </html>
