--- a/index.html
+++ b/index.html
@@ -5,16 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/index_styles.css">
 </head>
 <body>
     
-    <div id="dataTest">
+    <div class="loader-div loading_off">
+        <span class="loader">
+          <img src="imgs/Portal.png" alt="Portal">
+        </span>
+    </div>
+
+    <div id="Datadiv">
 
     </div>
 
 
 
-    <script src="index.js"></script>
+    <script src="scripts/index.js"></script>
 </body>
 </html>
