--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     
+    <input type="text" id="SearchCharacter">
+
     <div class="loader-div loading_off">
         <span class="loader">
           <img src="imgs/Portal.png" alt="Portal">
