--- a/index.html
+++ b/index.html
@@ -1,30 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="styles/index_styles.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Rick And Morty API - Julio Díaz</title>
+    <link rel="icon" type="image/x-icon" href="imgs/faviicon.jpg" />
+    <link rel="stylesheet" href="styles/index_styles.css" />
+  </head>
+  <body>
     
-    <input type="text" id="SearchCharacter">
+    <form id="SearchForm">
+    <div class="Header">
+      <div class="inputbox">
+        <input type="text" id="SearchCharacter" />
+        <span class="SearchText"></span>
+        <i></i>
+      </div>
+      <button>Buscar</button>
+    </form>
+      <button id="changeLenguage_btn" type="button"></button>
+    </div>
 
     <div class="loader-div loading_off">
-        <span class="loader">
-          <img src="imgs/Portal.png" alt="Portal">
-        </span>
+      <span class="loader">
+        <img src="imgs/Portal.png" alt="Portal" />
+      </span>
     </div>
 
-    <button id="changeLenguage_btn"></button>
-
-    <div id="Datadiv">
-
-    </div>
-
-
+    <div id="Datadiv"></div>
 
     <script src="scripts/index.js"></script>
-</body>
+  </body>
 </html>
