Styled character page

--- a/character.html
+++ b/character.html
@@ -7,17 +7,19 @@
     <title>Rick And Morty API - Character</title>
     <link rel="icon" type="image/x-icon" href="imgs/faviicon.jpg" />
     <link rel="stylesheet" href="styles/character_styles.css">
+    <script src="https://kit.fontawesome.com/a555f75e92.js" crossorigin="anonymous"></script>
 </head>
 <body>
-
     <div class="loader-div ">
         <span class="loader">
           <img src="imgs/Portal.png" alt="Portal">
         </span>
+    </div> 
+
+    <div class="returnPage">
     </div>
 
     <div id="charDiv">
-
     </div>
 
     <script src="scripts/character.js"></script>
