Data not longer will desapear after changelenguage

--- a/character.html
+++ b/character.html
@@ -7,6 +7,9 @@
     <title>Rick And Morty API - Character</title>
     <link rel="icon" type="image/x-icon" href="imgs/faviicon.jpg" />
     <link rel="stylesheet" href="styles/character_styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sniglet&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a555f75e92.js" crossorigin="anonymous"></script>
 </head>
 <body>
