--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <script src="https://kit.fontawesome.com/a555f75e92.js" crossorigin="anonymous"></script>
   </head>
   <body>
-
     <div class="loader-div loading_off">
       <span class="loader">
         <img src="imgs/Portal.png" alt="Portal" />
@@ -21,14 +20,12 @@
     </div>
     
     <div class="Header">
-      <div style="display: flex;">
       <div class="inputbox">
-        <input type="text" id="SearchCharacter" title="Buscador"/>
+        <input type="text" id="SearchCharacter" required="required" title="Buscador"/>
         <span class="SearchText"></span>
         <i></i>
       </div>
       <button class="StyledBtn" id="SrchCharBtn"><i class="fa fa-search"></i></button>
-      </div>
       <button class="StyledBtn" id="ResetSearchBtn"><i class="fa fa-rotate-left"></i></button>
       <button id="changeLenguage_btn" class="StyledBtn"></button>
     </div>
