Added ScrollBar for mobile users

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <button id="changeLenguage_btn" class="StyledBtn"></button>
     </div>
 
-    <div id="Datadiv"></div>
+    <div class="Datadiv"></div>
 
     <div id="PaginationsButtons" class="footer">
       <button id="RetuPagBtn" class="StyledBtn"><i class="fa fa-arrow-left"></i></button>
